# mcp-amadeus

./: README.md  pyproject.toml
src/: server.py
